- Use string-similarity to ensure that excerpts are unique - Improve the readability of the excerpts display

--- a/src/styles/related-papers.css
+++ b/src/styles/related-papers.css
@@ -68,8 +68,17 @@
   margin-bottom: 0.25em;
 }
 
+.related-interaction-evidence-source-excerpts {
+  padding: 10px;
+  background-color: #f8f8f8;
+}
+
 .related-interaction-evidence-source-excerpt {
-  padding: 0 0 1em;
+  padding: 0 0 0.8em;
+}
+
+.related-interaction-evidence-source-excerpt:last-child {
+  padding: 0;
 }
 
 .related-interaction-additional-evidence {
